# minijson

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build-me.sh  minijson.pyx  requirements.txt  setup.cfg  setup.py  specification.md
.circleci/: config.yml
docs/: changelog.md  changelog.rst  conf.py  index.rst  specification.rst  usage.rst
minijson/: __init__.py  exceptions.pyx  routines.pxd  routines.pyx
tests/: test.sh  test_minijson.py
