# coding: utf-8
[metadata]
name = minijson
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Piotr Maślanka
author_email = piotr.maslanka@dronehub.ai
description = A library for serializing JSON in the MINIJSON format
url = https://git.cervirobotics.com/dronehub/minijson

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 0

