# coding: utf-8
[metadata]
name = minijson
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Piotr Maślanka
author_email = piotr.maslanka@dronehub.ai
description = A library for serializing JSON in the MINIJSON format
url = https://git.cervirobotics.com/Dronehub/minijson
project-urls =
    Documentation = https://minijson.readthedocs.io/
	Code = https://github.com/Dronehub/minijson
	Issue tracker = https://github.com/Dronehub/minijson/issues
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 0

[options]
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,!=3.6.*
